# CacheStrategy

./: CMakeLists.txt  readme.md  test_policy.cpp
lib/: KICachePolicy.h  KLfuCache.h  KLruCache.h
lib/KArcCache/: KArcCache.h  KArcCacheNode.h  KArcLfuPart.h  KArcLruPart.h
